@@ -198,7 +198,7 @@ $$ \phi_{t} = y_{t*} \gamma $$
 
 Both $\mu_{ti}$ and $\phi_{t}$ must be positive, so negative estimates are replaced with a small positive number (\texttt{1e-8}).
   
-\section{Simulate CNVs}
+\section{Simulating CNVs}
 
 Next we simulate CNVs in 8 samples on both chromosomes representing regions with a copy number of 0,1,3 and 4, relative to a background copy number of 2.  This is accomplished by selecting a fraction of the reads contained in the CNV bounds and removing or doubling them.  
 
@@ -245,7 +245,7 @@ Calling \texttt{plot} on the \textit{ExomeCopy} object draws segments of constan
 
 \subsection{Looping \exomeCopy over multiple samples and chromosomes}
 
-In order to apply \exomeCopy to a full dataset of multiple chromosomes and samples, we write a wrapper function \texttt{runExomeCopy}.  This allows for distribution of jobs across workstations, for example.  Keep in mind that the non-PAR region of chrX in male samples should be fitted separately, with \texttt{d = 1}.
+In order to apply \exomeCopy to a full dataset of multiple chromosomes and samples, we write a wrapper function \texttt{runExomeCopy}.  This allows for distribution of jobs across workstations, for example.  Keep in mind that the non-PAR region of chrX in male samples should be fit separately, with \texttt{d = 1}.
 
 <<>>=
 runExomeCopy <- function(sample.name,seqs) {
@@ -265,6 +265,8 @@ fit.list <- lapply(samples,runExomeCopy,seqs)
 t1 <- Sys.time()
 paste("~",round((as.numeric(t1 - t0) / 60) / (8 * sum(width(rdata))) * 32e6,1)," minutes for 1 sample, 32 Mb of target",sep="")
 @ 
+
+\subsection{Compiling results, filter and plot CNVs}
 
 Using \texttt{compileCopyCountSegments} on the list of lists, we can compile the segments across samples.  We remove the segments with copy count 2.  As exome sequencing is subject to high variance in read counts, in some samples a few ranges with too high or low read counts are called as CNV, which we see in the next plot.  Often the majority of these cases can be removed by requiring a minimum number of ranges (for example requiring the \texttt{nranges} column returned by \texttt{copyCountSegments} to be greater than 5).
 
