@@ -13,7 +13,7 @@
   \tabular{ll}{
     Package: \tab exomeCopy\cr
     Type: \tab Package\cr
-    Version: \tab 1.1.6\cr
+    Version: \tab 1.1.7\cr
     Date: \tab 2012-02-26\cr
     License: \tab GPL (>= 2)\cr
     LazyLoad: \tab yes\cr
